# sfml_games

./: CMakeLists.txt  Game.cpp  README.md  StringHelper.cpp  main.cpp
includes/: Game.h  StringHelper.h  StringHelper.inl
